--- a/Areas/Admin/Views/Products/Delete.cshtml
+++ b/Areas/Admin/Views/Products/Delete.cshtml
@@ -6,12 +6,32 @@
 
 <h2>Delete Product</h2>
 
-<div class="alert alert-danger">
-    Are you sure you want to delete <strong>@Model.Title</strong>?
+<h4>Are you sure you want to delete this product?</h4>
+<hr />
+
+<div>
+    <dl class="row">
+        <dt class="col-sm-2">Title</dt>
+        <dd class="col-sm-10">@Model.Title</dd>
+
+        <dt class="col-sm-2">Price</dt>
+        <dd class="col-sm-10">@Model.Price.ToString("C")</dd>
+
+        <dt class="col-sm-2">Category</dt>
+        <dd class="col-sm-10">@Model.Category?.Name</dd>
+
+        <dt class="col-sm-2">Image</dt>
+        <dd class="col-sm-10">
+            @if (!string.IsNullOrEmpty(Model.ImageUrl))
+            {
+                <img src="@Model.ImageUrl" style="max-width:150px;" class="img-thumbnail" />
+            }
+        </dd>
+    </dl>
 </div>
 
-<form asp-action="DeleteConfirmed" method="post">
+<form asp-area="Admin" asp-controller="Products" asp-action="Delete" method="post">
     <input type="hidden" asp-for="Id" />
-    <button type="submit" class="btn btn-danger">Yes, Delete</button>
-    <a asp-action="Index" class="btn btn-secondary">Cancel</a>
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a asp-area="Admin" asp-controller="Products" asp-action="Index" class="btn btn-secondary">Cancel</a>
 </form>
