--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -15,6 +15,8 @@
 }
 
 <form asp-action="Create" method="post" enctype="multipart/form-data">
+    @Html.AntiForgeryToken() 
+
     <div class="mb-3">
         <label asp-for="Title" class="form-label">Product Title</label>
         <input asp-for="Title" class="form-control" />
