--- a/Views/Product/Create.cshtml
+++ b/Views/Product/Create.cshtml
@@ -48,7 +48,7 @@
         <input type="file" name="imageFile" class="form-control" />
     </div>
 
-    <button type="submit" class="btn btn-success">Create</button>
+    <button type="submit" class="btn btn-success">Add product</button>
     <a asp-action="Index" class="btn btn-secondary ms-2">Back</a>
 </form>
 
