--- a/Views/Product/Edit.cshtml
+++ b/Views/Product/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit Product";
 }
 
-<h2 class="mb-4">Edit Product</h2>
+<h2 class="mb-4">Update Product</h2>
 
 @if (TempData["Message"] != null)
 {
