--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DropBoxMarket.styles.css" asp-append-version="true" />
+
 </head>
 <body>
     <header>
@@ -55,7 +56,13 @@
                             <a class="nav-link" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Category" asp-action="Index">Categories</a>
+                            <a class="nav-link" asp-controller="Category" asp-action="Index">
+                                Categories
+                                @if (ViewBag.CategoryCount != null && (int)ViewBag.CategoryCount > 0)
+                                {
+                                    <span class="badge bg-info">@ViewBag.CategoryCount</span>
+                                }
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Contact" asp-action="Index">Contact</a>
@@ -65,7 +72,11 @@
                         </li>
                     </ul>
 
+                    
                     <partial name="_LoginPartial" />
+
+                    
+
                 </div>
             </div>
         </nav>
@@ -92,6 +103,7 @@
             </nav>
         }
 
+       
         <main role="main" class="pb-3">
             @if (TempData["Message"] != null)
             {
@@ -103,11 +115,14 @@
 
             @RenderBody()
         </main>
+
+       
+
     </div>
 
     <footer class="border-top footer text-muted mt-4">
         <div class="container">
-            &copy; 2025 - DropBoxMarket - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            © 2025 - DropBoxMarket - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
@@ -117,5 +132,6 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
